Bug 687489 - pdfwrite creates invalid Type3 font -- missing characters
Summary: pdfwrite creates invalid Type3 font -- missing characters
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: master
Hardware: All All
: P4 normal
Assignee: Igor Melichev
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-05-28 11:16 UTC by Ray Johnston
Modified: 2008-12-19 08:31 UTC (History)
1 user (show)

See Also:
Customer: 411
Word Size: ---


Attachments
A reduced test (186.69 KB, application/postscript)
2004-06-01 02:32 UTC, Igor Melichev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ray Johnston 2004-05-28 11:16:07 UTC
PROB 1:
When GS_8_1X branch pdfwrite is used to convert the attached PS 
file to PDF, some characters are missing from the last page (black
layer).

Both gs and Acrobat Reader display missing characters.

PROB 2:
When the HEAD rev is used to convert the PS to PDF, the result
is even worse.

When the resulting PDF is displayed with gs, an error is issued
because the Type3 font does not contain the /M glyph in the
CharProcs, and the Type3 doesn't contain a .notdef character.

With Acrobat Reader, the file shows missing characters.

PROB 3:
Also the PDF file created by Acrobat Distiller is MUCH smaller than
the file created with Ghostscript
Comment 1 Ray Johnston 2004-05-28 11:17:46 UTC
Created attachment 688 [details]
Input PS file

File that GS doesn't convert to PDF correctly.
Comment 2 Ray Johnston 2004-05-28 11:18:47 UTC
Created attachment 689 [details]
PS file converted using Distiller
Comment 3 Ray Johnston 2004-05-28 11:19:31 UTC
Created attachment 690 [details]
PDF created using gs 8.1x branch
Comment 4 Ray Johnston 2004-05-28 11:20:37 UTC
Created attachment 691 [details]
PDF created using HEAD gs (as of date of bug submission)
Comment 5 Igor Melichev 2004-05-31 11:25:00 UTC
1. Can't reproduce with the current CVS HEAD.
Likely you didn't apply the patches
http://www.ghostscript.com/pipermail/gs-cvs/2004-May/004506.html
http://www.ghostscript.com/pipermail/gs-cvs/2004-May/004507.html

2. Should it go to GS_8_1X ?

3. Yes, GS generates a longer file. To be analyzed.
Comment 6 Igor Melichev 2004-05-31 11:40:19 UTC
Well, I've gort an answer for (3).
The original PS file emulates an enbolded font with printing a glyph 4 times 
with small offsets. Adobe Distiller drops this effect. GS preserves this effect 
with creating a Type 3 font, which prints a glyph 4 times - same as the 
original PS does. Thus it's a feature rather than a bug. 

Comment 7 Igor Melichev 2004-05-31 11:43:55 UTC
Oops, with the current HEAD I can see missed glyphs in the last page with 
Acrobat Reader 5 and with GS. To be analyzed.
Comment 8 Igor Melichev 2004-06-01 02:32:19 UTC
Created attachment 694 [details]
A reduced test

Attaching a reduced test. It prints 2 characters 'E', one with white color, and
another one with black color. Converting with distiller the second one is
visible. Converting with GS both are invisible. The problem is that the white
color appears written into the charproc, but it must not.
Comment 10 Igor Melichev 2004-06-01 10:47:37 UTC
Please note that the fixed GS generates a PDF, which Adobe Reader 6 reads fine.
However there is a problem with Acrobat Reader 5, which IMO is Adobe bug :
with the test document of the bug 687489 it paints an "invisible" text in the 
4th page. That text isn't visible when viewing with Adobe reader 6 and with GS.
The text is painted with a white color, but AR 5 erroneusly paints it with 
black.