gs/src/gdevpdfx.h
@@ -1041,6 +1041,8 @@ int pdf_end_char_proc(gx_device_pdf * pdev, pdf_stream_position_t * ppos);
 int pdf_do_char_image(gx_device_pdf * pdev, const pdf_char_proc_t * pcp,
 		      const gs_matrix * pimat);
 
+/* Start charproc accumulation for a Type 3 font. */
+int pdf_start_charproc_accum(gx_device_pdf *pdev);
 /* Install charproc accumulator for a Type 3 font. */
 int pdf_install_charproc_accum(gx_device_pdf *pdev, gs_font *font, const double *pw, 
 		gs_text_cache_control_t control, gs_char ch, gs_const_string *gnstr);
